--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,13 +13,13 @@
   <ion-list>
     <ion-item-sliding *ngFor="let todo of todos">
       <ion-item>
-        <ion-icon name="{{todo.category.icon}}" item-start></ion-icon>
+        <ion-icon name="{{todo.category?.icon}}" item-start></ion-icon>
         <h3><strong>{{todo.name}}</strong></h3>
         <time>{{todo.time | date: 'medium'}}</time>
-        <p>{{todo.category.name}}</p>
+        <p>{{todo.category?.name}}</p>
       </ion-item>
       <ion-item-options side="right">
-        <button ion-button color="primary" (click)="onComplete(todo)">
+        <button ion-button color="primary" (click)="onComplete(todo.id)">
           <ion-icon name="checkmark-circle"></ion-icon>
         </button>
         <button ion-button color="danger" (click)="onDelete(todo)">
